token check method added
